敏感词，日志增加

--- a/tokenizer/readme
+++ b/tokenizer/readme
@@ -1,12 +1,12 @@
 #tokenizer
 ##镜像构建
 '''
-docker build -t 192.168.88.135:5000/2404/tokenizer:1.0.0
+docker build -t 192.168.88.135:5000/2404/tokenizer:1.0.0 .
 '''
 ## 服务启动
 '''
 docker service create --name 2404-tokenizer \
 -p 3002:3002 --replicas 2 \
---withi-registry-auth \
+--with-registry-auth \
 192.168.88.135:5000/2404/tokenizer:1.0.0
 '''
